--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^14.0.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "@pipedream/sdk": "^0.1.0",
-    "@tanstack/react-query": "^5.0.0",
-    "axios": "^1.6.0"
+    "next": "14.2.3",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "@pipedream/sdk": "0.1.0",
+    "@tanstack/react-query": "5.28.4",
+    "axios": "1.6.8"
   },
   "devDependencies": {
     "@types/node": "^20",
