--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "@tanstack/react-query": "5.28.4",
-    "axios": "1.6.8"
+    "axios": "1.6.8",
+    "@pipedream/sdk": "0.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
